Fix nav alignment with side content

--- a/app_dev/resources/scss/_partials/overview/_content.scss
+++ b/app_dev/resources/scss/_partials/overview/_content.scss
@@ -2,7 +2,7 @@
     width: 750px;
 
     .overview-nav {
-        margin-top: 90px;
+        margin-top: 111px;
         width: 650px;
         margin-left: auto;
         margin-right: auto;
